# python3-template

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/python3_template/: .python-version  __init__.py  console.py  wikipedia.py
src/python3_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
