[tool.poetry]
name = "python3-template"
version = "0.1.0"
description = "python3-template project"
license="MIT"
authors = ["Zach Gallagher <zachagallagher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
python3-template = "python3_template.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

