[tool.poetry]
name = "python3-template"
version = "0.1.1"
description = "python3-template project"
license="MIT"
authors = ["Zach Gallagher <zachagallagher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.5.1"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.770"
pytype = {version = "^2020.4.1", python = "3.7"}
typeguard = "^2.7.1"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.2"
xdoctest = "^0.12.0"
sphinx = "^3.0.1"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.22"

[tool.poetry.scripts]
python3-template = "python3_template.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python3_template"]

[tool.coverage.report]
fail_under = 100
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
